k8s/logging/02-kibana.yaml
# Elasticsearch'teki loglari arayip gorsellestirdigimiz arayuz. Kibana kendisi
# veri tutmuyor, sadece Elasticsearch'e sorgu atiyor - ELASTICSEARCH_HOSTS
# k8s'in kendi DNS'i uzerinden servis adiyla (elasticsearch) baglaniyor,
# IP hardcode edilmiyor.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.14.3
          ports:
            - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
---
# dikkat: burada tls tanimli degil, sadece http dinliyor. Tarayicidan girerken
# https:// yazilirsa (veya tarayici otomatik yukseltirse) Traefik'in varsayilan
# self-signed sertifikasina dusup "guvenli degil" uyarisi verir - dogru link
# her zaman http:// ile baslamali
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
spec:
  ingressClassName: traefik
  rules:
    - host: kibana.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
    - host: kibana.192.168.56.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
